# SaProt

./: .gitignore  README.md  pyproject.toml
.github/workflows/: test.yml
SaProt/dataset/saprot/: saprot_annotation_dataset.py
SaProt/model/: abstract_model.py
SaProt/model/saprot/: saprot_annotation_model.py  saprot_contact_model.py  saprot_foldseek_mutation_model.py  saprot_lm_model.py  saprot_mutation_model.py  saprot_ppi_model.py  saprot_regression_model.py
SaProt/utils/: esm_loader.py  foldseek_util.py  generate_lmdb.py  module_loader.py  weights.py
scripts/: mutation_zeroshot.py  training.py
tests/: basic_load.py  mutation_effect.py  structure_awared.py
